[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "agents.fun"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy[all]==0.21.19",
    "openai==1.82.0",
    "requests>=2.28.1,<2.33.0",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "hypothesis==6.21.6",
    "open-aea-test-autonomy==0.21.19",
    "web3<8,>=7.0.0",
    "open-aea-cli-ipfs==2.2.1",
    "pytest-asyncio",
    "aiohttp<4.0.0,>=3.8.5",
    "certifi",
    "multidict",
    "ecdsa>=0.15",
    "py-ecc<10,>=8",
    "websocket_client<1,>=0.32.0",
    "pytest==8.4.2",
    "openapi-core==0.22.0",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "jsonschema>=4.23.0,<5.0.0",
    "replicate==0.28.0",
    "moviepy==1.0.3",
    "anthropic==0.21.3",
    "google-api-python-client==2.130.0",
    "tiktoken==0.12.0",
    "httpx==0.28.1",
    "google-genai==1.17.0",
    "pillow==12.1.1",
    "prometheus-client>=0.23.1,<0.24",
    "pebble==5.1.3",
    "PyYAML==6.0.1",
    "prometheus_client==0.23.1",
    "pyyaml<7.0.0,>=6.0.0",
    "google-api-core",
    "open-aea-helpers==0.21.19",
    "python-dotenv",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/agents-fun-mech"

[dependency-groups]
dev = [
    "setuptools>=78.0.1,<79",
    "tomte[cli, tests]==0.6.5",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
