[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "agents.fun"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    # Framework/lib deps — ranges (mech-family = "mech repos", not apps).
    "requests>=2.28.1",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "hypothesis>=6",
    "web3<8,>=7.0.0",
    "pytest-asyncio>=1.3",
    "aiohttp<4.0.0,>=3.8.5",
    "certifi",
    "multidict",
    "ecdsa>=0.15",
    "py-ecc<10,>=8",
    "websocket_client<1,>=0.32.0",
    "pytest>=8,<10",
    "openapi-core<0.23,>=0.22",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "jsonschema>=4.23.0,<5.0.0",
    "prometheus-client>=0.23.1,<0.24",
    "pebble>=5.1,<5.2",
    "pyyaml<7.0.0,>=6.0.0",
    "python-dotenv",
    "pip>=24.0",
    # Custom-tool AI / media deps — ranges.
    "openai>=1.82,<2",
    "replicate>=0.28,<0.29",
    "moviepy>=1,<2",
    "anthropic>=0.21,<0.22",
    "google-api-python-client>=2.130,<3",
    "google-api-core",
    "google-genai>=1.17,<2",
    "tiktoken>=0.12,<0.13",
    "httpx>=0.28,<0.29",
    "pillow>=12,<13",
]

[project.urls]
Repository = "https://github.com/valory-xyz/agents-fun-mech"

[dependency-groups]
dev = [
    "setuptools>=78.0.1,<79",
    "tomte[cli, tests]==0.6.5",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
