[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "agents.fun"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    # Agent-repo (app) deps — exact pins per David's #436 rule.
    # Ranges are reserved for framework/lib repos; agent repos pin
    # everything non-OA throughout.
    "requests==2.32.5",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "hypothesis==6.21.6",
    "web3<8,>=7.0.0",
    "pytest-asyncio==1.3.0",
    "aiohttp<4.0.0,>=3.8.5",
    "certifi==2026.2.25",
    "multidict==6.7.1",
    "ecdsa>=0.15",
    "py-ecc<10,>=8",
    "websocket_client<1,>=0.32.0",
    "pytest==8.4.2",
    "openapi-core==0.22.0",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "jsonschema>=4.23.0,<5.0.0",
    "prometheus-client==0.23.1",
    "pebble==5.1.3",
    "pyyaml<7.0.0,>=6.0.0",
    "python-dotenv==0.21.1",
    "pip>=24.0",
    # Custom-tool AI / media deps — exact pins per agent-repo rule
    # (each tool is configured against a specific version).
    "openai==1.82.0",
    "replicate==0.28.0",
    "moviepy==1.0.3",
    "anthropic==0.21.3",
    "google-api-python-client==2.130.0",
    "google-api-core>=2.20.0,<3",
    "google-genai==1.17.0",
    "tiktoken==0.12.0",
    "httpx==0.28.1",
    "pillow==12.1.1",
]

[project.urls]
Repository = "https://github.com/valory-xyz/agents-fun-mech"

[dependency-groups]
dev = [
    "setuptools>=78.0.1,<79",
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@54780e1e34d4a5bd908f4ece1fae86437bded2c1",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
# Dev customs are under packages/agents_fun/customs/, agent + service
# under packages/valory/. Pin packages_paths to the primary first-party
# author so canonical env vars resolve sensibly.
packages_paths = "packages/valory"
# Third-party skills/contracts on disk are synced from mech upstream.
upstream_pins = ["valory-xyz/mech@v0.31.2"]
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@54780e1e34d4a5bd908f4ece1fae86437bded2c1"
# Customs are file-form (no per-pkg tests/ dir). The only first-party
# tests live under tests/; without pinning, auto-discovery picks up
# upstream `packages/valory/skills/.../tests/` (abstract_round_abci,
# task_execution) whose handler-log assertions and tendermint-binary
# deps don't apply downstream.
pytest_targets = ["tests"]

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
